apps/ollama/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: qe-infra
spec:
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 80
      targetPort: 11434
